# pytorch-practical-training

./: .zenodo.json  01_my_first_pytorch_neural_network.ipynb  02_protein_subcellular_localisation_classifier.ipynb  03_single_cell_autoencoder.ipynb  04_chest_Xray_CNN.ipynb  05_chest_Xray_Transfer_Learning.ipynb  GRU.ipynb  README.md  exam.ipynb  extra_Titanic_Basic_Interpret.ipynb  extra_Xray_CNN_basic_interpret.ipynb  installation_instructions.md  ladybug_GRU.ipynb  pyproject.toml  pytorch_course.yml  pytorchtools.py  schemas.json
data/: chest_Xray_train_y.pt  chest_Xray_valid_y.pt
data/UCI_HAR_subset/: x_valid.npy  y_train.npy  y_valid.npy
data/mRNN/: lncRNAs.TEST500.fa  mRNAs.TEST500.fa
data/single_cell/: example.cellType.csv
drafts/: 04_RNA_classifier_RNN.ipynb  MNIST_RNN.ipynb  RNN_virseeker_draft.ipynb
slides/: DeepLearning_Tran.pptx  TechniquesDL2024.pptx
solutions/: AE_dataload.py  AE_model.py  CNN_exercise_64.py  CNN_flatten_output_dim.py  GRU_ladybug.py  TL_model_embed.py  TL_resnet50_embed.py  XOR_NN.py  classifier_CEloss.py  embed_all.py
