[project]
name = "pytorch-course"
dependencies = ["ray[data,train,tune,serve]>=2.49.2,<3"]

[tool.pixi.project]
channels = ["https://prefix.dev/conda-forge"]
platforms = ["linux-64"]

[tool.pixi.feature.gpu.system-requirements]
cuda = "12.0"

[tool.pixi.feature.gpu.dependencies]
cuda-version = "12.6.*"
pytorch-gpu = "*"

[tool.pixi.feature.cpu.dependencies]
pytorch-cpu = "*"

[tool.pixi.environments]
gpu = ["gpu"]
default = ["cpu"]

[tool.pixi.dependencies]
seaborn = ">=0.13.2,<0.14"
notebook = ">=7.4.6,<8"
plotly = ">=6.3.0,<7"
pytorch-model-summary = ">=0.1.1,<0.2"
shap = ">=0.48.0,<0.49"
ipywidgets = ">=8.1.7,<9"
pytables = ">=3.10.2,<4"
torchvision = ">=0.22.0,<0.25"
captum = ">=0.7.0,<0.8"
